--- a/grub.cfg
+++ b/grub.cfg
@@ -1,6 +1,22 @@
 set default=0
 set timeout=0
 
+#if [ x"${grub_platform}" = xpc ] ; then
+#  set gfxmode=320x200x16
+#  set gfxpayload=keep
+#
+#  insmod font
+#  loadfont /boot/grub/fonts/unicode.pf2
+#
+#  insmod vbe
+#  insmod vga
+#  insmod video_bochs
+#  insmod video_cirrus
+#
+#  insmod gfxterm
+#  terminal_output gfxterm
+#fi
+
 menuentry "osdev" {
 	multiboot /kernel
 }
