--- a/.bochsrc
+++ b/.bochsrc
@@ -169,7 +169,8 @@ display_library: sdl2 #, options="fullscreen" # startup in fullscreen mode
 #  2.2.6 2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4       21 to 25 Mips
 #  2.2.6 2.1Ghz Athlon XP with Linux 2.6/g++ 3.4          12 to 15 Mips
 #=======================================================================
-cpu: model=ryzen, count=1, ips=2000000, reset_on_triple_fault=0
+cpu: model=ryzen, count=1, ips=100000000, reset_on_triple_fault=0
+#cpu: model=broadwell_ult, count=1, ips=2000000, reset_on_triple_fault=0
 
 #=======================================================================
 # MEMORY
@@ -656,7 +657,7 @@ debugger_log: -
 # Enable GDB stub. See user documentation for details.
 # Default value is enabled=0.
 #=======================================================================
-#gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
+gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
 
 #=======================================================================
 # MAGIC_BREAK:
