Better compatibility, -O2 and higher working properly, prettier build output
+ Added EFI GRUB in Docker image
~ Better compatibility by disabling MMX, SSE and AMD "Red Zone"
~ Changed to "large" memory model
~ Tuned for more generic CPUs
~ More user-friendly output from makefile
~ Reverting to multiboot v1 format for better compatibility with non-grub loaders
~ Moved multiboot header structure to kernel file
~ Merged RGB mixing to one operation in background rendering
~ Enabled debug in VGA ROM for BOCHS
~ Reverted to internal BOCHS debugger
- Leftover astyle config file removed

--- a/.bochsrc
+++ b/.bochsrc
@@ -215,6 +215,7 @@ romimage: file=$BXSHARE/BIOS-bochs-latest
 #=======================================================================
 #vgaromimage: file=bios/VGABIOS-elpin-2.40
 vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest
+#vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest-debug
 #vgaromimage: file=$BXSHARE/VGABIOS-lgpl-latest-cirrus
 
 #=======================================================================
@@ -635,6 +636,7 @@ debugger_log: -
 #   com4: enabled=1, mode=pipe-server, dev=\\.\pipe\mypipe
 #=======================================================================
 #com1: enabled=1, mode=term, dev=/dev/ttyp9
+com1: enabled=1, mode=file, dev=serial.out
 
 
 #=======================================================================
@@ -657,7 +659,7 @@ debugger_log: -
 # Enable GDB stub. See user documentation for details.
 # Default value is enabled=0.
 #=======================================================================
-gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
+#gdbstub: enabled=1, port=1234, text_base=0, data_base=0, bss_base=0
 
 #=======================================================================
 # MAGIC_BREAK:
